simplify http response result
